[project]
name = "miyakowasure-check"
version = "0.1.0"
description = "CLI tool to monitor room availability at Natsuse Onsen Miyakowasure ryokan"
requires-python = ">=3.11"
dependencies = [
    "playwright>=1.40.0",
    "httpx>=0.25.0",
    "typer>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
miyakowasure-check = "miyakowasure_check.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/miyakowasure_check"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-asyncio>=0.21.0",
]
